--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-requests==2.31.0
-six==1.16.0
-python-chess==1.999
-chess==1.10.0
+requests>=2.31.0
+six>=1.16.0
+python-chess>=1.999
+chess>=1.10.0
